--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.0",
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.1",
     "@react-three/postprocessing": "^2.7.0",
+    "lamina": "^1.1.23",
     "leva": "^0.9.34",
     "postprocessing": "^6.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.148.0"
+    "react-spring": "^9.7.0",
+    "three": "^0.148.0",
+    "vercel": "^28.16.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
